# test1

test1/: meson.build
test2/: main.cc  meson.build  test.cc  test.h
test3/: main.cc  meson.build
test3/test4/: main.cc
test4/: meson.build
